--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -56,11 +56,10 @@
 #Experience .buttons {
 	position: absolute;
 	top: 50%;
-	right: -22%;
+	right: -18%;
 	transform: translate(0, -50%);
 }
 
 #Experience .buttons button {
-	padding: 0.5rem 0;
-	width: 4rem;
+	padding: 0.5rem 0.5rem;
 }
